src/parser/snapshots/output/function_body_with_subblocks.ast.snap
---
source: src/parser/parser.rs
description: basic
expression: ast
info: function_body_with_subblocks.c
---
functions:
  - location:
      line: 1
      column: 1
    name:
      name: main
      location:
        line: 1
        column: 5
    body:
      start_loc:
        line: 1
        column: 16
      end_loc:
        line: 8
        column: 1
      items:
        - declaration:
            location:
              line: 2
              column: 5
            kind:
              declaration:
                identifier:
                  name: a
                  location:
                    line: 2
                    column: 9
                init_expression:
                  location:
                    line: 2
                    column: 13
                  kind:
                    int_constant:
                      - "10"
                      - decimal
        - declaration:
            location:
              line: 3
              column: 5
            kind:
              declaration:
                identifier:
                  name: b
                  location:
                    line: 3
                    column: 9
                init_expression: ~
        - statement:
            location:
              line: 3
              column: 12
            kind:
              sub_block:
                start_loc:
                  line: 3
                  column: 12
                end_loc:
                  line: 6
                  column: 5
                items:
                  - statement:
                      location:
                        line: 4
                        column: 9
                      kind:
                        expression:
                          location:
                            line: 4
                            column: 9
                          kind:
                            assignment:
                              lvalue:
                                location:
                                  line: 4
                                  column: 9
                                kind:
                                  variable: b
                              rvalue:
                                location:
                                  line: 4
                                  column: 13
                                kind:
                                  int_constant:
                                    - "20"
                                    - decimal
                              op: ~
                  - statement:
                      location:
                        line: 5
                        column: 9
                      kind:
                        expression:
                          location:
                            line: 5
                            column: 9
                          kind:
                            assignment:
                              lvalue:
                                location:
                                  line: 5
                                  column: 9
                                kind:
                                  variable: a
                              rvalue:
                                location:
                                  line: 5
                                  column: 13
                                kind:
                                  binary:
                                    - add
                                    - location:
                                        line: 5
                                        column: 13
                                      kind:
                                        variable: a
                                    - location:
                                        line: 5
                                        column: 17
                                      kind:
                                        variable: b
                              op: ~
        - statement:
            location:
              line: 7
              column: 5
            kind:
              return:
                location:
                  line: 7
                  column: 12
                kind:
                  variable: a
